--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 #root{
+  display: flex;
   justify-content: center;
   width: 100%;
   height: 100%;
+  background-color: #16161c;
 }
 
 .container{
