--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root{
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background-color: #16161c;
